# rust-tests

./: .gitignore  Cargo.toml
manager/: Cargo.toml  README.md
manager/src/: lib.rs
manager/src/files/: mod.rs
manager/src/files/several/: mod.rs
manager/tests/: files_handler_tests.rs  several_files_object_tests.rs
manager/tests/files_handler/: mod.rs
manager/tests/test_entity/: mod.rs
src/: main.rs
test_bin/: Cargo.toml
test_bin/src/: main.rs
