[package]
name = "elo-test-manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A manager to handle with files easily"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.136" }
serde_json = "^1.0.79"
